[gd_scene load_steps=6 format=3 uid="uid://bwtcvur732fvd"]

[ext_resource type="PackedScene" uid="uid://ctd0otb88d5ug" path="res://addons/aero_tools/uires/hud_gauge_numeric/hud_gauge_numeric.tscn" id="1"]
[ext_resource type="Script" path="res://addons/aero_tools/uires/hud_shared/hud_shared.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cx7q2r1a78pq3" path="res://addons/aero_tools/uires/hud_gauge_hybrid/hud_gauge_hybrid.tscn" id="2_4tg88"]
[ext_resource type="PackedScene" uid="uid://b3g28rsgsjcxx" path="res://addons/aero_tools/uires/hud_ladder/hud_ladder.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://bnb4sufeloij4" path="res://addons/aero_tools/uires/hud_shared/hud_shared_mask.png" id="4"]

[node name="HUDShared" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="GaugeSPD" parent="." instance=ExtResource("2_4tg88")]
layout_mode = 1
offset_right = 200.0
offset_bottom = 200.0

[node name="GaugeHDG" parent="." instance=ExtResource("1")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
label_displayed = "MAG"

[node name="GaugeTHR" parent="." instance=ExtResource("1")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
label_displayed = "THR"

[node name="GaugeALT" parent="." instance=ExtResource("2_4tg88")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 200.0
grow_horizontal = 0
value_maximum = 99999.0
value_digits = 5

[node name="Centre" type="Node2D" parent="."]
z_index = 1
position = Vector2(960, 540)

[node name="Mask" type="PointLight2D" parent="Centre"]
z_index = 1
blend_mode = 3
range_z_min = 1
range_z_max = 2
texture = ExtResource("4")

[node name="Wings" type="Node2D" parent="Centre"]

[node name="Line2D" type="Line2D" parent="Centre/Wings"]
points = PackedVector2Array(-150, 0, -50, 0, 0, 50, 50, 0, 150, 0)
width = 5.0

[node name="FPM" type="Line2D" parent="Centre/Wings"]
points = PackedVector2Array(0, -40, 0, -20, 20, 0, 20, 0, 20, 0, 40, 0, 20, 0, 0, 20, -20, 0, -40, 0, -20, 0, 0, -20, 0, -40)
width = 3.0

[node name="HUDLadder" parent="Centre" instance=ExtResource("3")]
